add login token
